# SC-system-ai

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-attach.sh
.devcontainer/scripts/: post-attach.sh  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler_branch.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  fix-request.md
.github/workflows/: assign_label.yml  auto_merge.yml  check_code.yml  create_release.yml  release.yml  shared_version_bump.yml  version_bump.yml  version_bump_major.yml  version_bump_minor.yml
docs/: agnet_invoke.md  azure-openai.md  developer.md  document_formatter.md  env.md  make-agent.md
src/sc-system-ai/: main.py
src/sc_system_ai/: logging.py  logging_config.py  main.py  prompts.py
src/sc_system_ai/agents/: agent.py  classify_agent.py  dummy_agent.py  main_agent.py  official_absence_agent.py  search_school_data_agent.py  self_introduce_agent.py  small_talk_agent.py  streaming_agent.py
src/sc_system_ai/agents/tools/: __init__.py  calling_agent.py  calling_dummy_agent.py  calling_search_school_data_agent.py  calling_self_introduce_agent.py  classify_role.py  magic_function.py  search_duckduckgo.py  search_school_data.py  submit_official_absence.py
src/sc_system_ai/agents/tools/calling_agent_tools/: __init__.py  calling_dummy_agent.py  calling_search_school_data_agent.py  calling_self_introduce_agent.py  calling_small_talk_agent.py
src/sc_system_ai/template/: agent.py  ai_settings.py  azure_cosmos.py  calling_agent.py  document_formatter.py  prompts.py  session_naming.py  streaming_handler.py  system_prompt.py  user_prompts.py
studies/: _langgraph.py  agent.py  chain.py  cosmosdb.py  prompt_template.py  prompts.py  read_docs.py  streaming_resp.py
tests/: test_packaging.py
