[tool.poetry]
name = "sc-system-ai"
version = "0.3.0"
description = "Package for handling LLM in sc-system."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sc_system_ai", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.4"
langchain-community = "^0.3.2"
langchain-openai = "^0.2.3"
duckduckgo-search = "^6.3.2"
azure-cosmos = "^4.7.0"


[tool.poetry.group.dev.dependencies]
langsmith = "^0.1.136"
langgraph = "^0.2.38"
pypdf = "^5.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

